Update footers for branding compliance

--- a/alumnae.html
+++ b/alumnae.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Cornell Alpha Omega Epsilon</title>
+    <title>Alpha Omega Epsilon at Cornell</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content name="keywords">
     <meta content name="description">
@@ -191,7 +191,8 @@
                   <h4>Mahak Bindal</h4>
                   <span>Computer Science & Info Sci '23</span>
                   <div class="social">
-                    <a href="http://linkedin.com/in/mahakbindal" target="_blank"><i
+                    <a href="http://linkedin.com/in/mahakbindal"
+                      target="_blank"><i
                         class="fa fa-linkedin"></i></a>
                     <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
                     <!-- <a href="link" target="_blank"><i class="fa fa-instagram"></i></a> -->
@@ -211,7 +212,8 @@
                   <h4>Sandra Cangelosi</h4>
                   <span>Mechanical Engineering '23</span>
                   <div class="social">
-                    <a href="http://linkedin.com/in/sandra-cangelosi-28b2181a3"><i
+                    <a
+                      href="http://linkedin.com/in/sandra-cangelosi-28b2181a3"><i
                         class="fa fa-linkedin" target="_blank"></i></a>
                     <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
                     <a href="https://www.instagram.com/sandra.cangelosi/"><i
@@ -286,7 +288,8 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="member">
-              <img src="images/epsilonclass/madeleine.jpg" class="img-fluid" alt>
+              <img src="images/epsilonclass/madeleine.jpg" class="img-fluid"
+                alt>
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Madeleine Taft</h4>
@@ -463,7 +466,8 @@
                     <a href="https://www.linkedin.com/in/edithkvu/"
                       target="_blank"><i class="fa fa-linkedin"></i></a>
                     <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
-                    <a href="https://www.instagram.com/edithkv" target="_blank"><i
+                    <a href="https://www.instagram.com/edithkv"
+                      target="_blank"><i
                         class="fa fa-instagram"></i></a>
                     <!-- <a href="link" target="_blank"><i class="fa fa-twitter"></i></a> -->
                     <!-- <a href="link" target="_blank"><i class="fa fa-desktop"></i></a> -->
@@ -499,7 +503,8 @@
                         <div class="social">
                           <a href="https://www.linkedin.com/in/vaishnavi-d/"
                             target="_blank"><i class="fa fa-linkedin"></i></a>
-                          <a href="https://github.com/vaish0928" target="_blank"><i
+                          <a href="https://github.com/vaish0928"
+                            target="_blank"><i
                               class="fa fa-github"></i></a>
                           <a href="https://www.instagram.com/theincredibledhulk"
                             target="_blank"><i class="fa fa-instagram"></i></a>
@@ -511,7 +516,8 @@
 
                 <div class="col-lg-3 col-md-6">
                   <div class="member">
-                    <img src="images/deltaclass/sarah.jpg" class="img-fluid" alt>
+                    <img src="images/deltaclass/sarah.jpg" class="img-fluid"
+                      alt>
                     <div class="member-info">
                       <div class="member-info-content">
                         <h4>Sarah North</h4>
@@ -608,7 +614,8 @@
 
                 <div class="col-lg-3 col-md-6">
                   <div class="member">
-                    <img src="images/deltaclass/cissy.jpg" class="img-fluid" alt>
+                    <img src="images/deltaclass/cissy.jpg" class="img-fluid"
+                      alt>
                     <div class="member-info">
                       <div class="member-info-content">
                         <h4>Cissy He</h4>
@@ -629,7 +636,8 @@
 
                 <div class="col-lg-3 col-md-6">
                   <div class="member">
-                    <img src="images/deltaclass/sandy.jpg" class="img-fluid" alt>
+                    <img src="images/deltaclass/sandy.jpg" class="img-fluid"
+                      alt>
                     <div class="member-info">
                       <div class="member-info-content">
                         <h4>Sandy Jiang</h4>
@@ -698,11 +706,13 @@
                         <div class="social">
                           <a href="https://www.linkedin.com/in/shuyingyi/"
                             target="_blank"><i class="fa fa-linkedin"></i></a>
-                          <a href="https://github.com/yingyishu" target="_blank"><i
+                          <a href="https://github.com/yingyishu"
+                            target="_blank"><i
                               class="fa fa-github"></i></a>
                           <a href="https://www.instagram.com/moriclytie"
                             target="_blank"><i class="fa fa-instagram"></i></a>
-                          <a href="https://www.shuyingyi.com/" target="_blank"><i
+                          <a href="https://www.shuyingyi.com/"
+                            target="_blank"><i
                               class="fa fa-desktop"></i></a>
                         </div>
                       </div>
@@ -768,7 +778,8 @@
 
                 <div class="col-lg-3 col-md-6">
                   <div class="member">
-                    <img src="images/gammaclass/avani.jpg" class="img-fluid" alt>
+                    <img src="images/gammaclass/avani.jpg" class="img-fluid"
+                      alt>
                     <div class="member-info">
                       <div class="member-info-content">
                         <h4>Avani Aggrwal</h4>
@@ -821,7 +832,8 @@
 
                 <div class="col-lg-3 col-md-6">
                   <div class="member">
-                    <img src="images/gammaclass/danyu.jpg" class="img-fluid" alt>
+                    <img src="images/gammaclass/danyu.jpg" class="img-fluid"
+                      alt>
                     <div class="member-info">
                       <div class="member-info-content">
                         <h4>Danyu Hu</h4>
@@ -877,7 +889,8 @@
 
                 <div class="col-lg-3 col-md-6">
                   <div class="member">
-                    <img src="images/gammaclass/gauri.jpg" class="img-fluid" alt>
+                    <img src="images/gammaclass/gauri.jpg" class="img-fluid"
+                      alt>
                     <div class="member-info">
                       <div class="member-info-content">
                         <h4>Gauri Pidatala</h4>
@@ -920,7 +933,8 @@
                               href="https://www.linkedin.com/in/jessica-chen-0305b2149/"
                               target="_blank"><i class="fa fa-linkedin"></i></a>
                             <a href="https://www.instagram.com/jessicachen8"
-                              target="_blank"><i class="fa fa-instagram"></i></a>
+                              target="_blank"><i
+                                class="fa fa-instagram"></i></a>
                           </div>
                         </div>
                       </div>
@@ -940,7 +954,8 @@
                               href="https://www.linkedin.com/in/annabelle-cram-203857133/"
                               target="_blank"><i class="fa fa-linkedin"></i></a>
                             <a href="https://www.instagram.com/anna_the_belle"
-                              target="_blank"><i class="fa fa-instagram"></i></a>
+                              target="_blank"><i
+                                class="fa fa-instagram"></i></a>
                             <a href="https://twitter.com/crammergrammar"
                               target="_blank"><i class="fa fa-twitter"></i></a>
                           </div>
@@ -963,7 +978,8 @@
                               target="_blank"><i class="fa fa-linkedin"></i></a>
                             <a
                               href="https://www.instagram.com/caroline_hanson_99"
-                              target="_blank"><i class="fa fa-instagram"></i></a>
+                              target="_blank"><i
+                                class="fa fa-instagram"></i></a>
                           </div>
                         </div>
                       </div>
@@ -982,7 +998,8 @@
                             <a href="https://www.linkedin.com/in/irenehung9/"
                               target="_blank"><i class="fa fa-linkedin"></i></a>
                             <a href="https://www.instagram.com/iw.hung"
-                              target="_blank"><i class="fa fa-instagram"></i></a>
+                              target="_blank"><i
+                                class="fa fa-instagram"></i></a>
                           </div>
                         </div>
                       </div>
@@ -998,7 +1015,8 @@
                           <h4>Katharine Ko</h4>
                           <span>Chemical Engineering '21</span>
                           <div class="social">
-                            <a href="https://www.linkedin.com/in/katharine-ko/"><i
+                            <a
+                              href="https://www.linkedin.com/in/katharine-ko/"><i
                                 class="fa fa-linkedin" target="_blank"></i></a>
                           </div>
                         </div>
@@ -1020,7 +1038,8 @@
                             <a href="https://github.com/ykatieli"
                               target="_blank"><i class="fa fa-github"></i></a>
                             <a href="https://www.instagram.com/ykatieli"
-                              target="_blank"><i class="fa fa-instagram"></i></a>
+                              target="_blank"><i
+                                class="fa fa-instagram"></i></a>
                             <a href="https://twitter.com/ykatieli"
                               target="_blank"><i class="fa fa-twitter"></i></a>
                             <a href="https://ykatieli.com/" target="_blank"><i
@@ -1098,7 +1117,8 @@
                               href="https://www.linkedin.com/in/emily-szpynda-47b703160/"><i
                                 class="fa fa-linkedin" target="_blank"></i></a>
                             <a href="https://www.instagram.com/emy_szpxx"
-                              target="_blank"><i class="fa fa-instagram"></i></a>
+                              target="_blank"><i
+                                class="fa fa-instagram"></i></a>
                           </div>
                         </div>
                       </div>
@@ -1107,7 +1127,8 @@
 
                   <div class="col-lg-3 col-md-6">
                     <div class="member">
-                      <img src="images/betaclass/kate.jpg" class="img-fluid" alt>
+                      <img src="images/betaclass/kate.jpg" class="img-fluid"
+                        alt>
                       <div class="member-info">
                         <div class="member-info-content">
                           <h4>Kate Triano</h4>
@@ -1132,7 +1153,8 @@
                               href="https://www.linkedin.com/in/angie-y-7628b7101/"
                               target="_blank"><i class="fa fa-linkedin"></i></a>
                             <a href="https://www.instagram.com/angieyu57"
-                              target="_blank"><i class="fa fa-instagram"></i></a>
+                              target="_blank"><i
+                                class="fa fa-instagram"></i></a>
                           </div>
                         </div>
                       </div>
@@ -1148,7 +1170,8 @@
                           <h4>Ellaine Chou</h4>
                           <span>Biomedical Engineering & CS '20</span>
                           <div class="social">
-                            <a href="https://www.linkedin.com/in/ellainechou/"><i
+                            <a
+                              href="https://www.linkedin.com/in/ellainechou/"><i
                                 class="fa fa-linkedin" target="_blank"></i></a>
                           </div>
                         </div>
@@ -1187,7 +1210,8 @@
                               href="https://www.linkedin.com/in/hannah-lee-b5a4a2125/"
                               target="_blank"><i class="fa fa-linkedin"></i></a>
                             <a href="https://www.instagram.com/banhannah97"
-                              target="_blank"><i class="fa fa-instagram"></i></a>
+                              target="_blank"><i
+                                class="fa fa-instagram"></i></a>
                           </div>
                         </div>
                       </div>
@@ -1196,7 +1220,8 @@
 
                   <div class="col-lg-3 col-md-6">
                     <div class="member">
-                      <img src="images/betaclass/mady.jpg" class="img-fluid" alt>
+                      <img src="images/betaclass/mady.jpg" class="img-fluid"
+                        alt>
                       <div class="member-info">
                         <div class="member-info-content">
                           <h4>Mady Matsunaga</h4>
@@ -1206,7 +1231,8 @@
                               href="https://www.linkedin.com/in/madilyn-matsunaga-861153127"
                               target="_blank"><i class="fa fa-linkedin"></i></a>
                             <a href="https://www.instagram.com/mady.mats"
-                              target="_blank"><i class="fa fa-instagram"></i></a>
+                              target="_blank"><i
+                                class="fa fa-instagram"></i></a>
                           </div>
                         </div>
                       </div>
@@ -1241,7 +1267,8 @@
                               href="https://www.linkedin.com/in/leilani-peralta-89a00b134/"
                               target="_blank"><i class="fa fa-linkedin"></i></a>
                             <a href="https://www.instagram.com/lei_llama"
-                              target="_blank"><i class="fa fa-instagram"></i></a>
+                              target="_blank"><i
+                                class="fa fa-instagram"></i></a>
                           </div>
                         </div>
                       </div>
@@ -1297,7 +1324,8 @@
                             <a href="https://github.com/caitlinstanton"
                               target="_blank"><i class="fa fa-github"></i></a>
                             <a href="https://www.instagram.com/codercaitlin"
-                              target="_blank"><i class="fa fa-instagram"></i></a>
+                              target="_blank"><i
+                                class="fa fa-instagram"></i></a>
                             <a href="https://twitter.com/codercaitlin"
                               target="_blank"><i class="fa fa-twitter"></i></a>
                             <a href="http://codercaitlin.io" target="_blank"><i
@@ -1408,7 +1436,8 @@
                             <a href="https://www.linkedin.com/in/olivialiao7/"
                               target="_blank"><i class="fa fa-linkedin"></i></a>
                             <a href="https://www.instagram.com/itzolivee"
-                              target="_blank"><i class="fa fa-instagram"></i></a>
+                              target="_blank"><i
+                                class="fa fa-instagram"></i></a>
                           </div>
                         </div>
                       </div>
@@ -1531,7 +1560,8 @@
                       <h3>Alpha Omega Epsilon</h3>
                     </div>
                     <div class="social-links">
-                      <a href="https://twitter.com/aoecornell/" class="twitter"><i
+                      <a href="https://twitter.com/aoecornell/"
+                        class="twitter"><i
                           class="fa fa-twitter"></i></a>
                       <a href="https://www.facebook.com/aoecornell/"
                         class="facebook"><i class="fa fa-facebook"></i></a>
@@ -1614,7 +1644,7 @@
             This organization is a registered student organization
             of Cornell
             University. <br>
-            Copyright &copy; <strong>Cornell Alpha Omega Epsilon</strong>
+            Copyright &copy; <strong>Alpha Omega Epsilon at Cornell</strong>
           </div>
           <div class="credits">
 
