--- a/sisters.html
+++ b/sisters.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Cornell Alpha Omega Epsilon</title>
+    <title>Alpha Omega Epsilon at Cornell</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content name="keywords">
     <meta content name="description">
@@ -855,7 +855,7 @@
           This organization is a registered student organization
           of Cornell
           University. <br>
-          Copyright &copy; <strong>Cornell Alpha Omega Epsilon</strong>
+          Copyright &copy; <strong>Alpha Omega Epsilon at Cornell</strong>
         </div>
         <div class="credits">
 
