--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Cornell Alpha Omega Epsilon - Professional Engineering Sorority</title>
+    <title>Alpha Omega Epsilon at Cornell - Professional Engineering
+      Sorority</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content name="keywords">
     <meta content name="description">
@@ -108,8 +109,8 @@
           <div class="col-md-8 intro-info order-md-first order-last">
             <h2>Beta Chi Chapter<br><span>ALPHA OMEGA EPSILON</span></h2>
             <p>Welcome! We are the Beta Chi Chapter of Alpha Omega Epsilon,
-              Cornell University's first and only professional & social
-              engineering sorority.</p>
+              the first and only professional & social engineering sorority at
+              Cornell.</p>
             <div>
               <a href="#about" class="btn-get-started scrollto">Learn More About
                 Us</a>
@@ -196,7 +197,8 @@
                 data-wow-duration="1.0s">
                 <div class="box">
                   <div class="icon" style="background: #fceef3;"><i
-                      class="ion-ios-analytics-outline" style="color: #ff689b;"></i></div>
+                      class="ion-ios-analytics-outline"
+                      style="color: #ff689b;"></i></div>
                   <h4 class="title"><a href>Leadership</a></h4>
                   <p class="description">We value the effect that positive
                     LEADERSHIP has on our Sorority and provide opportunities for
@@ -207,7 +209,8 @@
                 data-wow-delay="0.3s" data-wow-duration="1.4s">
                 <div class="box">
                   <div class="icon" style="background: #e1eeff;"><i
-                      class="ion-ios-world-outline" style="color: #2282ff;"></i></div>
+                      class="ion-ios-world-outline"
+                      style="color: #2282ff;"></i></div>
                   <h4 class="title"><a href>Responsibiility</a></h4>
                   <p class="description">We value RESPONSIBILITY by making
                     decisions based upon good judgment and being held
@@ -218,7 +221,8 @@
                 data-wow-delay="0.4s" data-wow-duration="1.4s">
                 <div class="box">
                   <div class="icon" style="background: #ecebff;"><i
-                      class="ion-ios-people-outline" style="color: #8660fe;"></i></div>
+                      class="ion-ios-people-outline"
+                      style="color: #8660fe;"></i></div>
                   <h4 class="title"><a href>Friendship</a></h4>
                   <p class="description">We value FRIENDSHIP by being loyal to
                     each other, caring for each other and recognizing the value
@@ -229,7 +233,8 @@
                 data-wow-duration="1.2s">
                 <div class="box">
                   <div class="icon" style="background: #fff0da;"><i
-                      class="ion-ios-bookmarks-outline" style="color: #e98e06;"></i></div>
+                      class="ion-ios-bookmarks-outline"
+                      style="color: #e98e06;"></i></div>
                   <h4 class="title"><a href>Individuality</a></h4>
                   <p class="description">We value the INDIVIDUALITY of our
                     Chapters and our members as this is what makes our family
@@ -241,7 +246,8 @@
                 data-wow-delay="0.1s" data-wow-duration="1.4s">
                 <div class="box">
                   <div class="icon" style="background: #e6fdfc;"><i
-                      class="ion-ios-paper-outline" style="color: #3fcdc7;"></i></div>
+                      class="ion-ios-paper-outline"
+                      style="color: #3fcdc7;"></i></div>
                   <h4 class="title"><a href>Professionalism</a></h4>
                   <p class="description">We value the PROFESSIONALISM of our
                     members as we treat each other with the dignity and respect
@@ -252,7 +258,8 @@
                 data-wow-delay="0.2s" data-wow-duration="1.4s">
                 <div class="box">
                   <div class="icon" style="background: #eafde7;"><i
-                      class="ion-ios-clock-outline" style="color:#41cf2e;"></i></div>
+                      class="ion-ios-clock-outline"
+                      style="color:#41cf2e;"></i></div>
                   <h4 class="title"><a href>Volunteering</a></h4>
                   <p class="description">We value our VOLUNTEERS who fulfill
                     their obligations for the betterment of the Sorority and
@@ -288,7 +295,8 @@
           <img src="images/affiliations/employers/amazon.png" alt="">
         </div> -->
             <div class="text-center wow fadeInUp">
-              <img src="images/affiliations/employers.jpg" class="img-fluid" alt>
+              <img src="images/affiliations/employers.jpg" class="img-fluid"
+                alt>
             </div>
             <br><br><br>
             <header class="section-header text-center">
@@ -355,7 +363,8 @@
                       <h3>Alpha Omega Epsilon</h3>
                     </div>
                     <div class="social-links">
-                      <a href="https://twitter.com/aoecornell/" class="twitter"><i
+                      <a href="https://twitter.com/aoecornell/"
+                        class="twitter"><i
                           class="fa fa-twitter"></i></a>
                       <a href="https://www.facebook.com/aoecornell/"
                         class="facebook"><i class="fa fa-facebook"></i></a>
@@ -439,7 +448,7 @@
             This organization is a registered student organization
             of Cornell
             University. <br>
-            Copyright &copy; <strong>Cornell Alpha Omega Epsilon</strong>
+            Copyright &copy; <strong>Alpha Omega Epsilon at Cornell</strong>
           </div>
           <div class="credits">
 
