Updated mmebers for Fall 24

--- a/alumnae.html
+++ b/alumnae.html
@@ -110,67 +110,242 @@
     <!--==========================
       Alumnae Section
     ============================-->
+
     <!--==========================
+      Theta Class Section
+      ============================-->
+      <section id="team" class>
+        <div class="container">
+          <div class="section-header text-center">
+            <h5>Spring 2023</h5>
+            <h3>Epsilon Class</h3>
+            <br>
+          </div>
+          <div class="row">
+  
+            <div class="col-lg-3 col-md-6">
+              <div class="member">
+                <img src="images/thetaclass/ehina.jpg" class="img-fluid" alt>
+                <div class="member-info">
+                  <div class="member-info-content">
+                    <h4>Ehina Srivastava</h4>
+                    <span>Environmental Engineering '24</span>
+                    <div class="social">
+                      <a
+                        href="https://www.linkedin.com/in/ehina-srivastava-a7b588185/"><i
+                          class="fa fa-linkedin" target="_blank"></i></a>
+                      <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
+                      <!-- <a href=""><i class="fa fa-instagram" target="_blank"></i></a> -->
+                      <!-- <a href="link" target="_blank"><i class="fa fa-twitter"></i></a> -->
+                      <!-- <a href="link" target="_blank"><i class="fa fa-desktop"></i></a> -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!--==========================
+      Eta Class Section
+      ============================-->
+      <section id="team" class>
+        <div class="container">
+          <br>
+          <div class="section-header text-center">
+            <h5>Spring 2022</h5>
+            <h3>Eta Class</h3>
+            <br>
+          </div>
+  
+          <div class="row">
+            <div class="col-lg-3 col-md-6">
+              <div class="member">
+                <img src="images/etaclass/elizabeth.jpg" class="img-fluid" alt>
+                <div class="member-info">
+                  <div class="member-info-content">
+                    <h4>Elizabeth Bunker</h4>
+                    <span>Environmental Engineering '24</span>
+                    <div class="social">
+                      <a
+                        href="https://www.linkedin.com/in/elizabeth-bunker-6b91141a7"
+                        target="_blank"><i class="fa fa-linkedin"></i></a>
+                      <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
+                      <a href="https://www.instagram.com/elizabeth_bunker/"
+                        target="_blank"><i class="fa fa-instagram"></i></a>
+                      <!-- <a href="link" target="_blank"><i class="fa fa-twitter"></i></a> -->
+                      <!-- <a href="link" target="_blank"><i class="fa fa-desktop"></i></a> -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+              <div class="member">
+                <img src="images/etaclass/evelync2.jpg" class="img-fluid" alt>
+                <div class="member-info">
+                  <div class="member-info-content">
+                    <h4>Evelyn Chiu</h4>
+                    <span>Mechanical Engineering '24</span>
+                    <div class="social">
+                      <a href="LinkedIn.com/in/evelynwchiu/" target="_blank"><i
+                          class="fa fa-linkedin"></i></a>
+                      <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
+                      <a href="Instagram.com/ev.chiu/" target="_blank"><i
+                          class="fa fa-instagram"></i></a>
+                      <!-- <a href="link" target="_blank"><i class="fa fa-twitter"></i></a> -->
+                      <!-- <a href="link" target="_blank"><i class="fa fa-desktop"></i></a> -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!--==========================
       Zeta Class Section
       ============================-->
-    <section id="team" class>
-      <div class="container">
-        <br>
-        <div class="section-header text-center">
-          <h5>Spring 2021</h5>
-          <h3>Zeta Class</h3>
+      <section id="team" class>
+        <div class="container">
           <br>
-        </div>
-
-        <div class="row">
-
-          <div class="col-lg-3 col-md-6">
-            <div class="member">
-              <img src="images/zetaclass/anusua2.jpg" class="img-fluid" alt>
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>Anusua Nath</h4>
-                  <span>Civil Engineering '23</span>
-                  <div class="social">
-                    <a href="https://www.linkedin.com/in/anusua-nath-56552615a"
-                      target="_blank"><i class="fa fa-linkedin"></i></a>
-                    <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
-                    <a
-                      href="https://instagram.com/anusua.nath?igshid=MDM4ZDc5MmU="
-                      target="_blank"><i class="fa fa-instagram"></i></a>
-                    <!-- <a href="link" target="_blank"><i class="fa fa-twitter"></i></a> -->
-                    <!-- <a href="link" target="_blank"><i class="fa fa-desktop"></i></a> -->
+          <div class="section-header text-center">
+            <h5>Spring 2021</h5>
+            <h3>Zeta Class</h3>
+            <br>
+          </div>
+  
+          <div class="row">
+  
+            <div class="col-lg-3 col-md-6">
+              <div class="member">
+                <img src="images/zetaclass/veda.jpg" class="img-fluid" alt>
+                <div class="member-info">
+                  <div class="member-info-content">
+                    <h4>Veda Balte</h4>
+                    <span>Electrical & Computer Engineering '24</span>
+                    <div class="social">
+                      <a href="https://www.linkedin.com/in/veda-balte/"
+                        target="_blank"><i class="fa fa-linkedin"></i></a>
+                      <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
+                      <a href="https://www.instagram.com/vedabaltee/"
+                        target="_blank"><i class="fa fa-instagram"></i></a>
+                      <!-- <a href="link" target="_blank"><i class="fa fa-twitter"></i></a> -->
+                      <!-- <a href="link" target="_blank"><i class="fa fa-desktop"></i></a> -->
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="member">
-              <img src="images/zetaclass/camille.jpg" class="img-fluid" alt>
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>Camille Slattery</h4>
-                  <span>Mechanical Engineering '23</span>
-                  <div class="social">
-                    <a
-                      href="https://www.linkedin.com/in/camille-slattery-63a4291b3"
-                      target="_blank"><i class="fa fa-linkedin"></i></a>
-                    <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
-                    <a
-                      href="https://instagram.com/camilleslatt?igshid=YmMyMTA2M2Y="
-                      target="_blank"><i class="fa fa-instagram"></i></a>
-                    <!-- <a href="link" target="_blank"><i class="fa fa-twitter"></i></a> -->
-                    <!-- <a href="link" target="_blank"><i class="fa fa-desktop"></i></a> -->
+  
+            <div class="col-lg-3 col-md-6">
+              <div class="member">
+                <img src="images/zetaclass/julia.jpg" class="img-fluid" alt>
+                <div class="member-info">
+                  <div class="member-info-content">
+                    <h4>Julia Chang</h4>
+                    <span>Materials Science and Engineering '24</span>
+                    <div class="social">
+                      <a href="https://www.linkedin.com/in/ju1iachang/"
+                        target="_blank"><i class="fa fa-linkedin"></i></a>
+                      <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
+                      <!-- <a href="link" target="_blank"><i class="fa fa-instagram"></i></a> -->
+                      <!-- <a href="link" target="_blank"><i class="fa fa-twitter"></i></a> -->
+                      <!-- <a href="link" target="_blank"><i class="fa fa-desktop"></i></a> -->
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
+            <div class="col-lg-3 col-md-6">
+              <div class="member">
+                <img src="images/zetaclass/melissa.jpg" class="img-fluid" alt>
+                <div class="member-info">
+                  <div class="member-info-content">
+                    <h4>Melissa Chen</h4>
+                    <span>Information Science '24</span>
+                    <div class="social">
+                      <a href="https://www.linkedin.com/in/melissachen042/"
+                        target="_blank"><i class="fa fa-linkedin"></i></a>
+                      <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
+                      <a href="https://www.instagram.com/me1issachen/"
+                        target="_blank"><i class="fa fa-instagram"></i></a>
+                      <!-- <a href="link" target="_blank"><i class="fa fa-twitter"></i></a> -->
+                      <!-- <a href="link" target="_blank"><i class="fa fa-desktop"></i></a> -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+              <div class="member">
+                <img src="images/zetaclass/anusua2.jpg" class="img-fluid" alt>
+                <div class="member-info">
+                  <div class="member-info-content">
+                    <h4>Anusua Nath</h4>
+                    <span>Civil Engineering '23</span>
+                    <div class="social">
+                      <a href="https://www.linkedin.com/in/anusua-nath-56552615a"
+                        target="_blank"><i class="fa fa-linkedin"></i></a>
+                      <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
+                      <a
+                        href="https://instagram.com/anusua.nath?igshid=MDM4ZDc5MmU="
+                        target="_blank"><i class="fa fa-instagram"></i></a>
+                      <!-- <a href="link" target="_blank"><i class="fa fa-twitter"></i></a> -->
+                      <!-- <a href="link" target="_blank"><i class="fa fa-desktop"></i></a> -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+              <div class="member">
+                <img src="images/zetaclass/camille.jpg" class="img-fluid" alt>
+                <div class="member-info">
+                  <div class="member-info-content">
+                    <h4>Camille Slattery</h4>
+                    <span>Mechanical Engineering '23</span>
+                    <div class="social">
+                      <a
+                        href="https://www.linkedin.com/in/camille-slattery-63a4291b3"
+                        target="_blank"><i class="fa fa-linkedin"></i></a>
+                      <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
+                      <a
+                        href="https://instagram.com/camilleslatt?igshid=YmMyMTA2M2Y="
+                        target="_blank"><i class="fa fa-instagram"></i></a>
+                      <!-- <a href="link" target="_blank"><i class="fa fa-twitter"></i></a> -->
+                      <!-- <a href="link" target="_blank"><i class="fa fa-desktop"></i></a> -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+              <div class="member">
+                <img src="images/zetaclass/nadia.jpg" class="img-fluid" alt>
+                <div class="member-info">
+                  <div class="member-info-content">
+                    <h4>Nadia Wong</h4>
+                    <span>Computer Science '24</span>
+                    <div class="social">
+                      <a href="https://www.linkedin.com/in/nadiacwong"
+                        target="_blank"><i class="fa fa-linkedin"></i></a>
+                      <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
+                      <a href="https://www.instagram.com/nadiachristabel/"
+                        target="_blank"><i class="fa fa-instagram"></i></a>
+                      <!-- <a href="link" target="_blank"><i class="fa fa-twitter"></i></a> -->
+                      <!-- <a href="link" target="_blank"><i class="fa fa-desktop"></i></a> -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+  
           </div>
-
         </div>
-      </div>
-    </section>
+      </section>
     <!--==========================
       Epsilon Class Section
       ============================-->
