Changed sisters photo

--- a/sisters.html
+++ b/sisters.html
@@ -107,7 +107,7 @@
           </header>
         </div>
         <div class="text-center wow fadeInUp">
-          <img src="images/thetaclass/thetaclass.jpg" class="img-fluid" alt>
+          <img src="images/f24/sisters6.png" class="img-fluid" alt>
         </div>
       </div>
     </section><!-- #faq -->
