Updated some images

--- a/events.html
+++ b/events.html
@@ -205,6 +205,15 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-sis"
             data-wow-delay="0.1s">
             <div class="portfolio-wrap">
+              <img src="images/eventsnew2/23.jpg" class="img-fluid" alt>
+              <div class="portfolio-info">
+                <h4><a>Indian Creek Farm</a></h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-sis"
+            data-wow-delay="0.1s">
+            <div class="portfolio-wrap">
               <img src="images/eventsnew2/11.jpg" class="img-fluid" alt>
               <div class="portfolio-info">
                 <h4><a>Brunch</a></h4>
