--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
               <div class="col-lg-5 col-md-6">
                 <div class="about-img">
-                  <img src="images/sp21active.jpg" alt>
+                  <img src="images/f24/iota_class.png" alt>
                 </div>
               </div>
 
