--- a/sisters.html
+++ b/sisters.html
@@ -130,7 +130,7 @@
               <img src="images/f24/iota_class/lila_alderate2.png" class="img-fluid" alt>
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Lila Alderate</h4>
+                  <h4>Lila Alderete</h4>
                   <span>Computer Science '27</span>
                   <div class="social">
                     <a href="https://www.linkedin.com/in/lila-alderete-88047929b/" target="_blank"><i class="fa fa-linkedin"></i></a>
