Removed and updated members

--- a/alumnae.html
+++ b/alumnae.html
@@ -163,6 +163,29 @@
             
             <div class="col-lg-3 col-md-6">
               <div class="member">
+                <img src="images/f24/theta_class/stella_dong.png" class="img-fluid" alt>
+                <div class="member-info">
+                  <div class="member-info-content">
+                    <h4>Stella Dong</h4>
+                    <span>Computer Science '25</span>
+                    <div class="social">
+                      <a href="https://www.linkedin.com/in/stella-dong-4631391b0/" target="_blank">
+                        <i class="fa fa-linkedin"></i>
+                      </a>
+                      <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
+                      <a href="https://www.instagram.com/_stelladong/" target="_blank">
+                        <i class="fa fa-instagram"></i>
+                      </a>
+                      <!-- <a href="link" target="_blank"><i class="fa fa-twitter"></i></a> -->
+                      <!-- <a href="link" target="_blank"><i class="fa fa-desktop"></i></a> -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6">
+              <div class="member">
                 <img src="images/f24/theta_class/jasmine_samadi2.png" class="img-fluid" alt>
                 <div class="member-info">
                   <div class="member-info-content">
