--- a/sisters.html
+++ b/sisters.html
@@ -718,7 +718,7 @@
               </div>
             </div> -->
   
-            <div class="col-lg-3 col-md-6">
+            <!-- <div class="col-lg-3 col-md-6">
               <div class="member">
                 <img src="images/f24/theta_class/nidhi_mylavarapu2.png" class="img-fluid" alt>
                 <div class="member-info">
@@ -729,17 +729,14 @@
                       <a href="https://www.linkedin.com/in/nidhi-mylavarapu/" target="_blank">
                         <i class="fa fa-linkedin"></i>
                       </a>
-                      <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
                       <a href="https://www.instagram.com/nidhimyla/" target="_blank">
                         <i class="fa fa-instagram"></i>
                       </a>
-                      <!-- <a href="link" target="_blank"><i class="fa fa-twitter"></i></a> -->
-                      <!-- <a href="link" target="_blank"><i class="fa fa-desktop"></i></a> -->
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
   
             <div class="col-lg-3 col-md-6">
               <div class="member">
@@ -804,7 +801,7 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-3 col-md-6">
+          <!-- <div class="col-lg-3 col-md-6">
             <div class="member">
               <img src="images/etaclass/kaylin3.jpg" class="img-fluid" alt>
               <div class="member-info">
@@ -814,16 +811,14 @@
                   <div class="social">
                     <a href="https://www.linkedin.com/in/kaylin-chan/"
                       target="_blank"><i class="fa fa-linkedin"></i></a>
-                    <!-- <a href="link" target="_blank"><i class="fa fa-github"></i></a> -->
                     <a href="https://www.instagram.com/kaylinchann/"
                       target="_blank"><i class="fa fa-instagram"></i></a>
-                    <!-- <a href="link" target="_blank"><i class="fa fa-twitter"></i></a> -->
-                    <!-- <a href="link" target="_blank"><i class="fa fa-desktop"></i></a> -->
                   </div>
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
+          
           <div class="col-lg-3 col-md-6">
             <div class="member">
               <img src="images/f24/eta_class/caroline_kerr.png" class="img-fluid" alt>
