--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
                 class="fa fa-instagram"></i></a>
             <a href="mailto:aoecornell@gmail.com" class="mailing"><i
                 class="fa fa-envelope"></i></a>
+            <a href="https://hr.cornell.edu/about/workplace-rights/equal-education-and-employment" class="mailing"><i
+                class="fa fa-exclamation-circle"></i></a>
           </div>
         </div>
       </div>
@@ -372,6 +374,8 @@
                         class="instagram"><i class="fa fa-instagram"></i></a>
                       <a href="mailto:aoecornell@gmail.com" class="mailing"><i
                           class="fa fa-envelope"></i></a>
+                      <a href="https://hr.cornell.edu/about/workplace-rights/equal-education-and-employment" class="mailing"><i
+                        class="fa fa-exclamation-circle"></i></a>
                     </div>
                   </div>
 
