--- a/leadership-2019.html
+++ b/leadership-2019.html
@@ -48,6 +48,8 @@
           <a href="https://www.facebook.com/aoecornell/" class="facebook"><i class="fa fa-facebook"></i></a>
           <a href="https://www.instagram.com/aoecornell/" class="instagram"><i class="fa fa-instagram"></i></a>
           <a href="mailto:aoesorority@cornell.edu" class="mailing"><i class="fa fa-envelope"></i></a>
+          <a href="https://hr.cornell.edu/about/workplace-rights/equal-education-and-employment" class="mailing"><i
+                        class="fa fa-exclamation-circle"></i></a>
         </div>
       </div>
     </div>
@@ -505,6 +507,8 @@
                     <a href="https://www.facebook.com/aoecornell/" class="facebook"><i class="fa fa-facebook"></i></a>
                     <a href="https://www.instagram.com/aoecornell/" class="instagram"><i class="fa fa-instagram"></i></a>
                     <a href="mailto:aoesorority@cornell.edu" class="mailing"><i class="fa fa-envelope"></i></a>
+                    <a href="https://hr.cornell.edu/about/workplace-rights/equal-education-and-employment" class="mailing"><i
+                        class="fa fa-exclamation-circle"></i></a>
                   </div>
                 </div>
 
