--- a/leadership-2024.html
+++ b/leadership-2024.html
@@ -54,6 +54,8 @@
                 class="fa fa-instagram"></i></a>
             <a href="mailto:aoecornell@gmail.com" class="mailing"><i
                 class="fa fa-envelope"></i></a>
+            <a href="https://hr.cornell.edu/about/workplace-rights/equal-education-and-employment" class="mailing"><i
+                class="fa fa-exclamation-circle"></i></a>
           </div>
         </div>
       </div>
@@ -447,6 +449,8 @@
                     <a href="mailto:aoecornell@gmail.com"
                       class="mailing"><i
                         class="fa fa-envelope"></i></a>
+                    <a href="https://hr.cornell.edu/about/workplace-rights/equal-education-and-employment" class="mailing"><i
+                        class="fa fa-exclamation-circle"></i></a>
                   </div>
                 </div>
 
