--- a/alumnae.html
+++ b/alumnae.html
@@ -1825,17 +1825,18 @@
                       <h3>Alpha Omega Epsilon</h3>
                     </div>
                     <div class="social-links">
-                      <a href="https://twitter.com/aoecornell/"
-                        class="twitter"><i
-                          class="fa fa-twitter"></i></a>
-                      <a href="https://www.facebook.com/aoecornell/"
-                        class="facebook"><i class="fa fa-facebook"></i></a>
-                      <a href="https://www.instagram.com/aoecornell/"
-                        class="instagram"><i class="fa fa-instagram"></i></a>
-                      <a href="mailto:aoecornell@gmail.com" class="mailing"><i
-                          class="fa fa-envelope"></i></a>
-                      <a href="https://hr.cornell.edu/about/workplace-rights/equal-education-and-employment" class="mailing"><i
-                        class="fa fa-exclamation-circle"></i></a>
+                      <a href="https://twitter.com/aoecornell/" class="twitter"><i class="fa fa-twitter"></i></a>
+                      <a href="https://www.facebook.com/aoecornell/" class="facebook"><i class="fa fa-facebook"></i></a>
+                      <a href="https://www.instagram.com/aoecornell/" class="instagram"><i class="fa fa-instagram"></i></a>
+                      <a href="mailto:aoecornell@gmail.com" class="mailing"><i class="fa fa-envelope"></i></a>
+                    </div>
+
+                    <!-- Equal Education & Employment -->
+                    <div class="ee-btn-wrapper">
+                      <a href="https://hr.cornell.edu/about/workplace-rights/equal-education-and-employment" 
+                        class="ee-btn" target="_blank">
+                        Equal Education &amp; Employment
+                      </a>
                     </div>
                   </div>
 
